Fix overflow for long numbers

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,11 @@ li:hover .delete-button {
   transition: left 400ms cubic-bezier(.14,.96,.71,1) 130ms;
   transition: left 400ms cubic-bezier(.14,.96,.71,1.32) 130ms;
 }
+.divider-arrow {
+  flex-shrink: 0;
+}
 .result-base {
+  flex-shrink: 0;
   width: 64px;
   text-align: center;
   font-style: italic;
@@ -92,7 +96,7 @@ h1 {
 
 ul {
   list-style-type: none;
-padding: 0;
+  padding: 5px;
 }
 .results li {
   display: flex;
@@ -164,16 +168,13 @@ button:hover {
     display: flex;
     width: 60%;
     margin: 0 auto;
-
   }
   main > * {
     width: 50%;
   }
 
-
   ul {
     width: 50%;
-    padding: 5px;
     margin-left: 40px;
     max-height: 60vh;
     overflow-y: auto;
